# Ai-doc-generator

./: .gitignore  .pre-commit-config.yaml  README_PROJECT.md  clients.py  config.py  logger.py  pyproject.toml
analyzer/: __init__.py  call_graph.py  dependency_graph.py
api/: __init__.py  main.py
chunking/: __init__.py  code_chunker.py
cli/: __init__.py  generate_docs.py
core/: __init__.py  language_detector.py  repo_loader.py  state_manager.py  utils.py
docs/: .docgen_state.json  README.md  api_docs.md  architecture.md  project_structure.md
final_test/: README.md  api_docs.md  architecture.md  project_structure.md
generator/: __init__.py  api_doc_generator.py  architecture_generator.py  project_structure_generator.py  readme_generator.py
parser/: __init__.py  symbol_extractor.py  tree_sitter_loader.py
test_llm/: README.md  api_docs.md  architecture.md  project_structure.md
tests/: __init__.py  conftest.py  test_cli.py  test_code_chunker.py  test_dependency_graph.py  test_language_detector.py  test_repo_loader.py  test_symbol_extractor.py
vector_store/: __init__.py  embeddings.py
